<resources>
    <string name="app_name">SharedPreferencesDemo</string>
    <string name="username">邮箱/手机号</string>
    <string name="password">请输入密码</string>
    <string name="login">登录</string>
    <string name="register_account">注册账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="next_step">下一步</string>
    <string name="register">注册</string>
    <string name="phone">请输入手机号</string>
</resources>
