<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#ededed"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/user" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/linear_border"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="54px"
                android:layout_height="54px"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:src="@drawable/user_login" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="12dp"
                android:background="@null"
                android:hint="@string/username"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView

            android:layout_width="340dp"
            android:layout_height="0.5dp"
            android:layout_gravity="center_horizontal"
            android:background="#e7e7e7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="54px"
                android:layout_height="54px"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="12dp"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_border_login"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="16sp"
      />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/register_account"
            android:clickable="true"
            android:textColor="#12b7f5" />

        <ImageView
            android:layout_width="0.5dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:background="#cccccc" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/forget_password"
            android:textColor="#12b7f5" />
    </LinearLayout>
</LinearLayout>